# 3DRP

./: .gitignore  .gitmodules  CMakeLists.txt  troubleshooting.txt
core/: CMakeLists.txt
core/include/: helpers.h  postprocessing.h  preprocessing.h  reconstruction.h
core/src/: helpers.cpp  postprocessing.cpp  preprocessing.cpp  reconstruction.cpp
ui/: CMakeLists.txt  threedrpui.cpp  threedrpui.h  threedrpui.ui  viewer.cpp  viewer.h
